i just added a heading and a paragraph

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HELLOWORLD</h1>
+    <h1>kiris awesome restaurant</h1>
+    <p>Kiris restaurant offers a variety of traditional and modern american cuisine. Regulars describe this restasarants as a comfrotable safe space filled with the smell of deliciuse food  </p>
 </body>
 </html>
