--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
      <H2>The menu</H2>
      <ul>
         <li>s Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). </li>
-        <li>The Clam Chowder Soup is a creamy New England-style chowder that is rich with clams and potatoes($7.95</li>
+        <li>
+        The Clam Chowder Soup is a creamy New England-style chowder that is rich with clams and potatoes($7.95</li>
      </ul>
 </body>
 </html>
