--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Kiris restaurant offers a variety of traditional and modern american cuisine. Regulars describe this restasarants as a comfrotable safe space filled with the smell of deliciuse food</p>
      <H2>The menu</H2>
      <ul>
-        <li>s Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). </li>
+        <li>Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). </li>
         <li>
         The Clam Chowder Soup is a creamy New England-style chowder that is rich with clams and potatoes($7.95</li>
      </ul>
