--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). </li>
         <li>
         The Clam Chowder Soup is a creamy New England-style chowder that is rich with clams and potatoes($7.95</li>
+        <li>
+            The Grilled Salmon is a fan favorite with the freshly grilled salmon being served with a lemon-butter sauce, seasonal vegetables, and mashed potatoes ($18.95)
+        </li>
      </ul>
 </body>
 </html>
