move the bottom li to the end of the item

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <li>
         The Clam Chowder Soup is a creamy New England-style chowder that is rich with clams and potatoes($7.95</li>
         <li>
-            The Grilled Salmon is a fan favorite with the freshly grilled salmon being served with a lemon-butter sauce, seasonal vegetables, and mashed potatoes ($18.95)
-        </li>
+            The Grilled Salmon is a fan favorite with the freshly grilled salmon being served with a lemon-butter sauce, seasonal vegetables, and mashed potatoes ($18.95)</li>
      </ul>
 </body>
 </html>
