added some new headings

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <h1>kiris awesome restaurant</h1>
     <p>Kiris restaurant offers a variety of traditional and modern american cuisine. Regulars describe this restasarants as a comfrotable safe space filled with the smell of deliciuse food</p>
           <H2> The menu</H2>
+          <h3>appetizers</h3>
      <ul>
         <li>
             Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). </li>
         <li>
         The Clam Chowder Soup is a creamy New England-style chowder that is rich with clams and potatoes($7.95</li>
+        <h3>The main courses</h3>
         <li>
             The Grilled Salmon is a fan favorite with the freshly grilled salmon being served with a lemon-butter sauce, seasonal vegetables, and mashed potatoes ($18.95)</li>
      </ul>
