moved the heading and added a new item to the list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>kiris awesome restaurant</h1>
     <p>Kiris restaurant offers a variety of traditional and modern american cuisine. Regulars describe this restasarants as a comfrotable safe space filled with the smell of deliciuse food</p>
           <H2>The menu</H2>
-          <h3>
+            <h3>
             appetizers</h3>
      <ul>
         <li>
@@ -20,6 +20,8 @@
             The main courses</h3>
         <li>
             The Grilled Salmon is a fan favorite with the freshly grilled salmon being served with a lemon-butter sauce, seasonal vegetables, and mashed potatoes ($18.95)</li>
+            <li>
+                juicy beef patty served with cheddar cheese, lettuce, tomatoes, and house sauce. Don’t forget the side of fries! ($14.95).</li>
      </ul>
 </body>
 </html>
