--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             The main courses</h3>
         <li>
             The Grilled Salmon is a fan favorite with the freshly grilled salmon being served with a lemon-butter sauce, seasonal vegetables, and mashed potatoes ($18.95)</li>
-            <li>
-                juicy beef patty served with cheddar cheese, lettuce, tomatoes, and house sauce. Dont forget the side of fries! ($14.95).</li>
+            <li>juicy beef patty served with cheddar cheese, lettuce, tomatoes, and house sauce. Dont forget the side of fries! ($14.95).</li>
      </ul>
 </body>
 </html>
