--- a/practice.html
+++ b/practice.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Website stuff</h1>
+    <h2>write good paragraph</h2>
+    <p>its important that your website is organized so that people can read it</p>
+    <h3>Tips</h3>
+    <ul>
+        <li>make important text big</li>
+        <li>make less important text small</li>
+        <li>make a list to organize ideas</li>
+    </ul>
+</body>cd
+</html>
