--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <li>
             The Grilled Salmon is a fan favorite with the freshly grilled salmon being served with a lemon-butter sauce, seasonal vegetables, and mashed potatoes ($18.95)</li>
             <li>juicy beef patty served with cheddar cheese, lettuce, tomatoes, and house sauce. Dont forget the side of fries! ($14.95).</li>
-            <h1>
-                Deserts</h1>
+            <h1>Deserts</h1>
      </ul>
 </body>
 </html>
