--- a/practice.html
+++ b/practice.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Website stuff</h1>
-    <h2>write good paragraph</h2>
-    <p>its important that your website is organized so that people can read it</p>
+    <h2>Write good paragraph</h2>
+    <p>It's important that your website is organized so that people can read it</p>
     <h2>Tips</h2>
     <ul>
         <li>make important text big</li>
