--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
             The Grilled Salmon is a fan favorite with the freshly grilled salmon being served with a lemon-butter sauce, seasonal vegetables, and mashed potatoes ($18.95)</li>
             <li>juicy beef patty served with cheddar cheese, lettuce, tomatoes, and house sauce. Dont forget the side of fries! ($14.95).</li>
             <h1>Deserts</h1>
-            <li> traditional apple pie topped with a scoop of vanilla ice cream and drizzled with caramel sauce ($6.95)</li>
-            <li>Chocolate Lava Cake served warm with a molten center and a dollop of whipped cream on top ($7.95).</li>
+            <li> traditional apple pie topped with a scoop of vanilla ice cream and drizzled with caramel sauce ($6.95)
+                
+            </li>
+            <li>Chocolate Lava Cake served warm with a molten center and a dollop of whipped cream on top ($7.95).
+
+            </li>
      </ul>
 </body>
 </html>
