--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
             <li>juicy beef patty served with cheddar cheese, lettuce, tomatoes, and house sauce. Dont forget the side of fries! ($14.95).</li>
             <h1>Deserts</h1>
             <li> traditional apple pie topped with a scoop of vanilla ice cream and drizzled with caramel sauce ($6.95)
-                
+
             </li>
             <li>Chocolate Lava Cake served warm with a molten center and a dollop of whipped cream on top ($7.95).
 
             </li>
+            <h3>
+                Drinks</h3>
+                <li>e House Blend Coffee is a rich and smooth coffee blend that is freshly brewed when ordered ($3.50). 
+                    
+                </li>
      </ul>
 </body>
 </html>
