--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
             </li>
             <h3>
                 Drinks</h3>
-                <li>e House Blend Coffee is a rich and smooth coffee blend that is freshly brewed when ordered ($3.50). 
+                <li>e House Blend Coffee is a rich and smooth coffee blend that is freshly brewed when ordered ($3.50).
+                    
+                </li>
+                <h3>Weekly Special and seasonal menu</h3>
+                <li> Every Monday is Pasta Night at Kiri’s Kitchen where you can enjoy any pasta dish at a $2 discount.
+
+                </li>
+                <li> Every Monday is Pasta Night at Kiri’s Kitchen where you can enjoy any pasta dish at a $2 discount.
                     
                 </li>
      </ul>
