--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
                 <li>e House Blend Coffee is a rich and smooth coffee blend that is freshly brewed when ordered ($3.50).
                     
                 </li>
-                <h3>Weekly Special and seasonal menu</h3>
+                <h3>
+                    Weekly Special and seasonal menu</h3>
                 <li> Every Monday is Pasta Night at Kiri’s Kitchen where you can enjoy any pasta dish at a $2 discount.
 
                 </li>
                 <li> Every Monday is Pasta Night at Kiri’s Kitchen where you can enjoy any pasta dish at a $2 discount.
-                    
+
                 </li>
      </ul>
 </body>
