--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                 <li> Every Monday is Pasta Night at Kiri’s Kitchen where you can enjoy any pasta dish at a $2 discount.
 
                 </li>
-                <li> Winter Squash Soup, a creamy squash soup topped with roasted pumpkin seeds ($7.95)
-                </li>
+                <li> Winter Squash Soup, a creamy squash soup topped with roasted pumpkin seeds ($7.95)</li>
      </ul>
 </body>
 </html>
