--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 
                 </li>
                 <li> Winter Squash Soup, a creamy squash soup topped with roasted pumpkin seeds ($7.95)</li>
-                <h3>
-                    Customer reviews</h3>
+                <h3>Customer reviews</h3>
                     <p>sarah L</p>
      </ul>
 </body>
