--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
                 <li> Winter Squash Soup, a creamy squash soup topped with roasted pumpkin seeds ($7.95)</li>
                 <h3>Customer reviews</h3>
                     <p>sarah L</p>
-                    <p> "The atmosphere is so warm and inviting, and the food is absolutely delicious! The grilled salmon is a must-try!"
-                        
-                    </p>
+                    <p> "The atmosphere is so warm and inviting, and the food is absolutely delicious! The grilled salmon is a must-try!"</p>
      </ul>
 </body>
 </html>
