--- a/aboutme.html
+++ b/aboutme.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My portfolio</title>
+    <title>about me</title>
 </head>
 <body>
     <header>
         <h1>Jose Monzon</h1>
         <p>Web Developer</p>
     </header>
+    
     <section>
         <h2>About Me</h2>
         <p>I am a strudent at thomas a edison high school stufdying comp science.</p>
