--- a/aboutme.html
+++ b/aboutme.html
@@ -3,17 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about me</title>
+    <title>Sophomore Portfolio</title>
+    <style>
+        body {
+            background-color: #e0f7fa;
+            font-family: Comic Sans MS, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #33;
+        }
+        img {
+            width: 120px;
+            display: block;
+            margin: 20px auto;
+        }
+        h3 {
+            color: #555;
+            text-decoration: underline;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: -2px 0;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Jose Monzon</h1>
-        <p>Web Developer</p>
-    </header>
-    
-    <section>
-        <h2>About Me</h2>
-        <p>I am a strudent at thomas a edison high school stufdying comp science.</p>
-    </section>
+    <h1>My Portfolio</h1>
+    <img src="https://assets.onecompiler.app/42vdjcybu/42vdgy8ue/Screenshot%202024-09-25%20132906.png" alt="image of icon">
+    <h3>About Me</h3>
+    <p>Hello, my name is Sebastian and I am a student at Thomas Edison High School.</p>
+    <h3>Projects</h3>
+    <il>
+        <li><a href="Practice.html">Practice Work</a></li>
+        <li><a href="project1.html">Project 1</a></li>
+        <li><a href="Lab1.html">Aurora Borealis</a></li>
+    </il>
 </body>
 </html>
