i donmt eevnm knonw

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           <H2>The menu</H2>
             <h3>
             appetizers</h3>
+            <img src="rolls.jpg" alt="some rolls">
      <ul>
         <li>
             Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). </li>
