--- a/project2/prj2.html
+++ b/project2/prj2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project2</title>
-    <link rel="stylesheet" href="prj2.css"
+     <link rel="stylesheet" href="prj2.css"
 </head>
 <body>
     <h1>kiris awesome restaurant</h1>
@@ -12,7 +12,8 @@
           <H2>The menu</H2>
             <h3>
             appetizers</h3>
-     <ul>
+     <img src="rolls.jpg" alt="some rolls"
+            <ul>Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). 
         <li>
             Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). </li>
         <li>
