--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
           <H2>The menu</H2>
             <h3>
             appetizers</h3>
-            <img src="rolls.jpg" alt="some rolls"
      <ul>
         <li>
             Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). </li>
+            <img src="rolls.jpg" alt="the rolls">
         <li>
         The Clam Chowder Soup is a creamy New England-style chowder that is rich with clams and potatoes($7.95</li>
         <h3>
