--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,7 @@
     <h1>My Portfolio</h1>
     <img src="https://assets.onecompiler.app/42vdjcybu/42vdgy8ue/Screenshot%202024-09-25%20132906.png" alt="image of icon">
     <h3>About Me</h3>
-    <p>Hello, my name is Sebastian and I am a student at Thomas Edison High School.</p>
+    <p>Hello, my name is JOSE and I am a student at Thomas Edison High School.</p>
     <h3>Projects</h3>
     <il>
         <li><a href="Practice.html">Practice Work</a></li>
