--- a/project3/prj3.html
+++ b/project3/prj3.html
@@ -9,7 +9,6 @@
 
     <!-- header title and introduction -->
     <div style="background-color: #228B22; text-align: center; font-size: 16px;">
-         
       <h1>Wild Guardian</h1>
       <p>Welcome to a journey through the eyes of those seldom seen. This website is dedicated to showcasing the beauty of endangered species around the globe.</p>
       <p>Our goal is to educate and inspire action towards conservation efforts.</p>
@@ -18,7 +17,7 @@
     <!-- container for featured species of the month -->
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; background-color: #f5f5dc; padding: 20px;">
       <!-- container for content on species list -->
-      <div style="text-align: center;">
+      <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; background-color: #f5f5dc; padding: 20px;">
         <h2>🌟 Featured Species</h2>
         <ul>
           <li>Amur Leopard</li>
