--- a/index.html
+++ b/index.html
@@ -3,46 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Me</title>
 </head>
 <body>
-    <h1>kiris awesome restaurant</h1>
-    <p>Kiris restaurant offers a variety of traditional and modern american cuisine. Regulars describe this restasarants as a comfrotable safe space filled with the smell of deliciuse food</p>
-          <H2>The menu</H2>
-            <h3>
-            appetizers</h3>
-     <ul>
-        <li>
-            Vegetable Spring Rolls and Clam Chowder Soup. The Vegetable Spring Rolls are crispy rolls that are filled with fresh veggies and served with a sweet chili dip ($6.95). </li>
-            <img src="rolls.jpg" alt="the rolls">
-        <li>
-        The Clam Chowder Soup is a creamy New England-style chowder that is rich with clams and potatoes($7.95</li>
-        <h3>
-            The main courses</h3>
-        <li>
-            The Grilled Salmon is a fan favorite with the freshly grilled salmon being served with a lemon-butter sauce, seasonal vegetables, and mashed potatoes ($18.95)</li>
-            <li>juicy beef patty served with cheddar cheese, lettuce, tomatoes, and house sauce. Dont forget the side of fries! ($14.95).</li>
-            <h1>Deserts</h1>
-            <li> traditional apple pie topped with a scoop of vanilla ice cream and drizzled with caramel sauce ($6.95)
-
-            </li>
-            <li>Chocolate Lava Cake served warm with a molten center and a dollop of whipped cream on top ($7.95).
-
-            </li>
-            <h3>
-                Drinks</h3>
-                <li>e House Blend Coffee is a rich and smooth coffee blend that is freshly brewed when ordered ($3.50).
-                    
-                </li>
-                <h3>
-                    Weekly Special and seasonal menu</h3>
-                <li> Every Monday is Pasta Night at Kiri’s Kitchen where you can enjoy any pasta dish at a $2 discount.
-
-                </li>
-                <li> Winter Squash Soup, a creamy squash soup topped with roasted pumpkin seeds ($7.95)</li>
-                <h3>Customer reviews</h3>
-                    <p>sarah L</p>
-                    <p> "The atmosphere is so warm and inviting, and the food is absolutely delicious! The grilled salmon is a must-try!"</p>
-     </ul>
+    <h1>My portfolio</h1>
+    <p>hello my name is jose and this is my portfolio</p>
+    <a href="project2/prj2.html"
+    <a href="project3/prj3.html"
+    <a href="practice.html"
 </body>
 </html>
