--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <h1>My portfolio</h1>
     <p>hello my name is jose and this is my portfolio</p>
-    <a href="project2/prj2.html"
-    <a href="project3/prj3.html"
-    <a href="practice.html"
+    <img src="Screenshot 2024-10-17 142007.png" alt="Me">
+    <a href="project2/prj2.html">Kiris Restaurant</a>
+    <a href="project3/prj3.html">The animal</a>
+    <a href="practice.html">practice</a>
 </body>
 </html>
