--- a/project3/prj3.html
+++ b/project3/prj3.html
@@ -17,7 +17,7 @@
     <!-- container for featured species of the month -->
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; background-color: #f5f5dc; padding: 20px;">
       <!-- container for content on species list -->
-      <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; background-color: #f5f5dc; padding: 20px;">
+      <div  class="blurb" style="display: flex;  justify-content: center; padding: 20px; height: 200px; align-items: center; "></div>
         <h2>🌟 Featured Species</h2>
         <ul>
           <li>Amur Leopard</li>
