--- a/project3/prj3.html
+++ b/project3/prj3.html
@@ -27,7 +27,7 @@
       </div>
 
       <!-- container for content on top conservation efforts of the month -->
-      <div class="conservation-section">
+      <div class="blurb-2">
         <h2>🌳 Top Conservation Efforts</h2>
         <ol>
           <li>Wildlife Protection Initiatives</li>
