--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>My portfolio</h1>
     <p>hello my name is jose and this is my portfolio</p>
     <img src="Screenshot 2024-10-17 142007.png" alt="Me">
-    <a href="project2/prj2.html">Kiris Restaurant</a>
-    <a href="project3/prj3.html">The animal</a>
-    <a href="practice.html">practice</a>
+    <ul>
+   <li><a href="project2/prj2.html">Kiris Restaurant</a></li>
+    <li><a href="project3/prj3.html">The animal</a></li>
+    <li><a href="practice.html">practice</a></li>
+</ul>
 </body>
 </html>
