--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img src="Screenshot 2024-10-17 142007.png" alt="Me">
     <ul>
    <li><a href="project2/prj2.html">Kiris Restaurant</a></li>
+   <li><a href="aurora/auo.html">The sky</a></li>
     <li><a href="project3/prj3.html">The animal</a></li>
     <li><a href="practice.html">practice</a></li>
 </ul>
