--- a/aurora/auo.html
+++ b/aurora/auo.html
@@ -8,6 +8,7 @@
 <body>
     <h1>The Aurora Borealis</h1>
     <h2>The Beauty of the Northern Lights</h2>
+    <img src="sky.jpeg" alt="the sky"
 </header>
 
 <section>
