--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <li><a href="project2/prj2.html">Kiris Restaurant</a></li>
    <li><a href="aurora/auo.html">The sky</a></li>
     <li><a href="project3/prj3.html">The animal</a></li>
+    <li><a href="finalprj/final.html">FINAL PROJECT</a></li>
     <li><a href="practice.html">practice</a></li>
 </ul>
 </body>
