bro plss js 2workl

--- a/aurora/auo.html
+++ b/aurora/auo.html
@@ -22,7 +22,7 @@
         The term "Aurora Borealis" comes from the Roman goddess of dawn, Aurora, and the Greek word "Boreas," which means "north wind." This name reflects the phenomenon's location in the northern part of the world, where it can be most easily observed.
     </p>
 
-    <h2>Where Can You See the Aurora Borealis?</h2>
+    <h2>Where Can I See the Aurora Borealis?</h2>
     <p>
         The best places to witness the Aurora Borealis are in countries like Norway, Sweden, Iceland, Canada, and Alaska. These regions experience long nights during the winter months, making them ideal for aurora sightings.
     </p>
