--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="final.css">
 </head>
 <body>
+    <div>
+        
+    </div>
     <img src="background.png" alt="pic">
 </body>
 </html>
