--- a/aurora/auo.html
+++ b/aurora/auo.html
@@ -17,14 +17,14 @@
         The Aurora Borealis, also known as the Northern Lights, is a natural light display that occurs in the polar regions. It is caused by the interaction of the solar wind with the Earth's magnetic field, resulting in brilliant colors lighting up the night sky. The auroras are most commonly seen in high-latitude regions near the Arctic and Antarctic.
     </p>
 
-    <h2>Why is it Called the "Northern Lights"?</h2>
+    <h2>Why is it Called the "Aourora Borealis"?</h2>
     <p>
-        The term "Aurora Borealis" comes from the Roman goddess of dawn, Aurora, and the Greek word "Boreas," which means "north wind." This name reflects the phenomenon's location in the northern part of the world, where it can be most easily observed.
+        The term "Aurora Borealis" comes from the Roman goddess of dawn, Aurora, and the Greek word "Boreas," which means "north wind." This name reflects the phenomenon's location in the northern part of the world, where it can be most easily observed. But most people ussualy know it as The Northern Lights
     </p>
 
     <h2>Where Can I See the Aurora Borealis?</h2>
     <p>
-        The best places to witness the Aurora Borealis are in countries like Norway, Sweden, Iceland, Canada, and Alaska. These regions experience long nights during the winter months, making them ideal for aurora sightings.
+        The best places to witness the Aurora Borealis are in countries like Norway, Sweden, Iceland, Canada, and Alaska. These regions experience long nights during the winter months, making them ideal for aurora sightings. There's also some states where you might be able to see them
     </p>
 </section>
 </body>
