--- a/aurora/auo.html
+++ b/aurora/auo.html
@@ -14,7 +14,7 @@
 <section>
     <h2>What is the Aurora Borealis?</h2>
     <p>
-        The Aurora Borealis, also known as the Northern Lights, is a natural light display that occurs in the polar regions. It is caused by the interaction of the solar wind with the Earth's magnetic field, resulting in brilliant colors lighting up the night sky. The auroras are most commonly seen in high-latitude regions near the Arctic and Antarctic.
+        The Aurora Borealis, also known as the Northern Lights, is a natural light display that occurs in the polar regions. It is caused by magnetic storms that have been triggered by solar activity, such as solar flares (explosions on the Sun) or coronal mass ejections (ejected gas bubbles). The auroras are most commonly seen in high-latitude regions near the Arctic and Antarctic. If you want to see it, its mostly visible during the night sky. It's an amazing phenomenon
     </p>
 
     <h2>Why is it Called the "Aourora Borealis"?</h2>
