--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="final.css">
 </head>
 <body>
-    <div>
-        
+    <div class="banner">
+        <img src="background.png" alt="Game Logo"> <!-- Replace with your logo file -->
+        <h1>Ghost school</h1>
+        <p>Jose Monzon</p>
     </div>
-    <img src="background.png" alt="pic">
 </body>
 </html>
