--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="banner">
-        <img src="background.png" alt="Game Logo"> <!-- Replace with your logo file -->
+        <img src="Screenshot 2024-10-17 142007.png" alt="Game Logo"> <!-- Replace with your logo file -->
         <h1>Ghost school</h1>
         <p>Jose Monzon</p>
+        <img src="background.png" alt="my game">
     </div>
 </body>
 </html>
