--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="final.css">
 </head>
 <body>
-    <div class="banner">
+    <div class="logo">
         <img src="Screenshot 2024-10-17 142007.png" alt="Game Logo"> <!-- Replace with your logo file -->
         <h1>Ghost school</h1>
         <p>Jose Monzon</p>
