--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -11,7 +11,11 @@
         <img src="Screenshot 2024-10-17 142007.png" alt="Game Logo"> <!-- Replace with your logo file -->
         <h1>Ghost school</h1>
         <p>Jose Monzon</p>
+        <p>thomas a edison</p>
     </div>
     <img src="background.png" alt="my game">
+    <div class="div">
+        <h1>Easy level</h1>
+    </div>
 </body>
 </html>
