--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -13,9 +13,9 @@
         <p>Jose Monzon</p>
         <p>thomas a edison</p>
     </div>
-    <img src="background.png" alt="my game">
-    <div class="div">
-        <h1>Easy level</h1>
+    <div class="myDIV">
+        <img src="background.png" alt="my game">
     </div>
+    <div class="hide"><h1>Easy Level</h1></div>
 </body>
 </html>
