--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -16,6 +16,8 @@
     <div class="myDIV">
         <img src="background.png" alt="my game">
     </div>
-    <div class="hide"><h1>Easy Level</h1></div>
+    <div class="hide"><h1>Easy Level</h1>
+        <img src="Screenshot 2024-11-07 132949.png" alt="before">
+    </div>
 </body>
 </html>
