--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -13,10 +13,11 @@
         <p>Jose Monzon</p>
         <p>thomas a edison</p>
     </div>
-    <div class="myDIV">
+    <div>
         <img src="background.png" alt="my game">
     </div>
-    <div class="hide"><h1>Easy Level</h1>
+    <div class="myDIV"><h1>Easy Level</h1></div>
+    <div class="hide">
         <img src="Screenshot 2024-11-07 132949.png" alt="before">
     </div>
 </body>
