--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -1,24 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spot the Difference Game</title>
+  </head>
+  <body>
     <link rel="stylesheet" href="final.css">
-</head>
-<body>
-    <div class="banner">
-        <img src="Screenshot 2024-10-17 142007.png" alt="Game Logo"> <!-- Replace with your logo file -->
-        <h1>Ghost school</h1>
-        <p>Jose Monzon</p>
-        <p>thomas a edison</p>
+
+    <div class="container">
+      <div class="title">
+        <h1>Spot The Difference!</h1>
+      </div>
+      <div class="container-bonus">
+        <div class="headings">
+          <h1>Thomas A. Edison CTE HS</h1>
+          <h2>Web Development</h2>
+          <h2>Final Project Ghost School</h2>
+          <h2>November 2024</h2>
+          <h2>Jose Monzon</h2>
+        </div>
+        <img class="imgofme" src="Screenshot 2024-10-17 142007.png" alt="Image of Me" width="35%;">
+      </div>
     </div>
-    <div>
-        <img src="background.png" alt="my game">
-    </div>
-    <div class="myDIV"><h1>Easy Level</h1></div>
-    <div class="hide">
-        <img src="Screenshot 2024-11-07 132949.png" alt="before">
-    </div>
-</body>
+    <!-- Wave effect container for instructions or game levels -->
+
+    <div class="container2">
+      <div class="wave" id="easy-level">
+
+        <h2>Instructions</h2>
+
+        <p>Hover over this section to reveal more details about the game, that way you can follow the instructions carefully to play each level!</p>
+
+        <p>In this game of, "Spot the Difference" there are 3 levels you can choose from depending on how difficult you'd like to play the game.</p>
+
+        <p>These 3 levels are:</p>
+
+        <div class="ol">
+          <ol class="centered-list">
+            <li id="easy">Easy</li>
+            <li id="medium">Medium</li>
+            <li id="hard">Hard</li>
+          </ol>
+        </div>
+
+        <p>Throughout each level, you are able to see multiple objects, you have only a few seconds to look at each of them. After that, BOOM! Your screen turns black and turns back on shortly after.</p>
+        <p>Only up to 3 out of all the objects have changed. As you progress through each level, spotting these differences will only get harder and harder. Can you spot the difference?</p>
+      </div>
+
+      <div class="wave2" id="easy-level">
+        <h2>Easy Level</h2>
+        <!-- Rollover image for the 'Easy' level -->
+
+        <div class="level">
+
+          <h3>Spot the Difference! Difficulty: <span style="color: lightgreen">Easy</span></h3>
+
+          <img src="before.png" alt="Easy Level Image" width="500"
+
+               onmouseover="this.src='after.png';"
+
+               onmouseout="this.src='before.png';">
+
+          <p>You have 5 seconds to view the items in the room. Drag the cursor out of the room once the 5 seconds are up!</p>
+
+        </div>
+      </div>
+
+      <div class="wave3" id="medium-level">
+        <h2>Medium Level</h2>
+        <!-- Rollover image for the 'Easy' level -->
+
+        <div class="level">
+
+          <h3>Spot the Difference! Difficulty: <span style="color: orange">Medium</span></h3>
+
+          <img src="beforeMed.png" alt="Medium Level Image" width="500"
+               onmouseover="this.src='afterM.png';"
+               onmouseout="this.src='beforeMed.png';">
+
+          <p>You have 5 seconds to view the items in the room. Drag the cursor out of the room once the 5 seconds are up!</p>
+
+        </div>
+      </div>
+
+      <div class="wave4" id="hard-level">
+        <h2>Hard Level</h2>
+      </div>
+  </body>
 </html>
