--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -56,11 +56,11 @@
 
           <h3>Spot the Difference! Difficulty: <span style="color: lightgreen">Easy</span></h3>
 
-          <img src="before.png" alt="Easy Level Image" width="500"
+          <img src="beforeEZ.png" alt="Easy Level Image" width="500"
 
-               onmouseover="this.src='after.png';"
+               onmouseover="this.src='AfterE.png';"
 
-               onmouseout="this.src='before.png';">
+               onmouseout="this.src='beforeEZ.png';">
 
           <p>You have 5 seconds to view the items in the room. Drag the cursor out of the room once the 5 seconds are up!</p>
 
@@ -73,7 +73,7 @@
 
         <div class="level">
 
-          <h3>Spot the Difference! Difficulty: <span style="color: orange">Medium</span></h3>
+          <h3>Spot the Difference! Difficulty: <span style="color: blue">Medium</span></h3>
 
           <img src="beforeMed.png" alt="Medium Level Image" width="500"
                onmouseover="this.src='afterM.png';"
@@ -86,6 +86,20 @@
 
       <div class="wave4" id="hard-level">
         <h2>Hard Level</h2>
+        <div class="level">
+
+          <h3>Spot the Difference! Difficulty: <span style="color: red">Hard</span></h3>
+
+          <img src="Hard_BEFORE.png" alt="Hard Level Image" width="500"
+
+               onmouseover="this.src='Hard_AFTER.png';"
+
+               onmouseout="this.src='Hard_BEFORE.png';">
+
+          <p>You have 5 seconds to view the items in the room. Drag the cursor out of the room once the 5 seconds are up! Make sure you pay close attention to each item!</p>
+        </div>
       </div>
+
+    </div>
   </body>
 </html>
