--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -90,11 +90,11 @@
 
           <h3>Spot the Difference! Difficulty: <span style="color: red">Hard</span></h3>
 
-          <img src="Hard_BEFORE.png" alt="Hard Level Image" width="500"
+          <img src="BeforeHard.png" alt="Hard Level Image" width="500"
 
-               onmouseover="this.src='Hard_AFTER.png';"
+               onmouseover="this.src='AfterH.png';"
 
-               onmouseout="this.src='Hard_BEFORE.png';">
+               onmouseout="this.src='BeforeHard.png';">
 
           <p>You have 5 seconds to view the items in the room. Drag the cursor out of the room once the 5 seconds are up! Make sure you pay close attention to each item!</p>
         </div>
