--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spot the Difference Game</title>
+    <title>Ghost-school</title>
   </head>
   <body>
     <link rel="stylesheet" href="final.css">
@@ -16,11 +16,11 @@
         <div class="headings">
           <h1>Thomas A. Edison CTE HS</h1>
           <h2>Web Development</h2>
-          <h2>Final Project Ghost School</h2>
+          <h2>Ghost School</h2>
           <h2>November 2024</h2>
           <h2>Jose Monzon</h2>
         </div>
-        <img class="imgofme" src="Screenshot 2024-10-17 142007.png" alt="Image of Me" width="35%;">
+        <img class="me" src="Screenshot 2024-10-17 142007.png" alt="Image of Me" width="35%;">
       </div>
     </div>
     <!-- Wave effect container for instructions or game levels -->
@@ -48,7 +48,7 @@
         <p>Only up to 3 out of all the objects have changed. As you progress through each level, spotting these differences will only get harder and harder. Can you spot the difference?</p>
       </div>
 
-      <div class="wave2" id="easy-level">
+      <div class="W2" id="easy-level">
         <h2>Easy Level</h2>
         <!-- Rollover image for the 'Easy' level -->
 
@@ -64,7 +64,7 @@
         </div>
       </div>
 
-      <div class="wave3" id="medium-level">
+      <div class="W3" id="medium-level">
         <h2>Medium Level</h2>
         <!-- Rollover image for the 'Easy' level -->
 
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <div class="wave4" id="hard-level">
+      <div class="W4" id="hard-level">
         <h2>Hard Level</h2>
         <div class="level">
 
