--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -19,6 +19,7 @@
           <h2>Ghost School</h2>
           <h2>November 2024</h2>
           <h2>Jose Monzon</h2>
+          <h2>Period:8-7</h2>
         </div>
         <img class="me" src="Screenshot 2024-10-17 142007.png" alt="Image of Me" width="35%;">
       </div>
