--- a/finalprj/final.html
+++ b/finalprj/final.html
@@ -43,7 +43,7 @@
           </ol>
         </div>
 
-        <p>Throughout each level, you are able to see multiple objects, you have only a few seconds to look at each of them. After that, BOOM! Your screen turns black and turns back on shortly after.</p>
+        <p>Throughout each level, you will be able to see multiple objects, you have only a few seconds to look at each of them. After that, BOOM! Your screen turns black and turns back on shortly after.</p>
         <p>Only up to 3 out of all the objects have changed. As you progress through each level, spotting these differences will only get harder and harder. Can you spot the difference?</p>
       </div>
 
