--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>My portfolio</h1>
     <p>hello my name is jose and this is my portfolio</p>
-    <img src="WIN_20241114_13_35_42_Pro (2).jpg" alt="Me">
+    <img src="IMG_7499.jpeg" alt="Me">
     <ul>
    <li><a href="project2/prj2.html">Kiris Restaurant</a></li>
    <li><a href="aurora/auo.html">The sky</a></li>
