--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li><a href="project3/prj3.html">The animal</a></li>
     <li><a href="finalprj/final.html">FINAL PROJECT</a></li>
     <li><a href="practice.html">practice</a></li>
+    <li><a href="josem817.github.io/Cert-Prep/">Cert prep</a></li>
 </ul>
 </body>
 </html>
