--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <li><a href="finalprj/final.html">FINAL PROJECT</a></li>
     <li><a href="practice.html">practice</a></li>
     <li><a href="josem817.github.io/Cert-Prep/">Cert prep</a></li>
+    <li><a href="josem817.github.io/G4C/">G4C Game</a></li>
 </ul>
 </body>
 </html>
