--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>My portfolio</h1>
-    <p>hello my name is jose and this is my portfolio</p>
+    <h2>About Me</h2>
+    <p>hello my name is jose and this is my portfolio and it shows all the work i have done from the beggining until present time.</p>
+    <br>
     <img src="IMG_7499.jpeg" alt="Me">
     <ul>
    <li><a href="project2/prj2.html">Kiris Restaurant</a></li>
