--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>About Me</h2>
     <p>hello my name is jose and this is my portfolio and it shows all the work i have done from the beggining until present time.</p>
     <br>
-    <img src="IMG_7499.jpeg" alt="Me">
+    <img src="Screenshot 2024-11-25 130752.png" alt="Me">
     <ul>
    <li><a href="project2/prj2.html">Kiris Restaurant</a></li>
    <li><a href="aurora/auo.html">The sky</a></li>
